--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
     <div class="container">
         <h2 class="visually-hidden"></h2>
         <ul class="list spdt-list">
-          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href=""></use></svg></div><h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
-          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href=""></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href=""></use></svg></div><h3 class="heading-three">Diligence</h3><p class="spdt-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href=""></use></svg></div><h3 class="heading-three">Technologies</h3><p class="spdt-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-antenna-1"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-clock-1"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-diagram-1"></use></svg></div><h3 class="heading-three">Diligence</h3><p class="spdt-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+
+          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-astronaut-1"></use></svg></div><h3 class="heading-three">Technologies</h3><p class="spdt-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
 </div>
 </section>
@@ -59,10 +63,14 @@
     <div class="container">
     <h2 class="heading-two">Our Team</h2>
 <ul class="list list-section-name">
-    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list list"><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href=""></use></svg></a></li></div></li>
-    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media"></li></div></li>
-    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media"></li></div></li>
-    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media"></li></ul></div></li>
+
+    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list list"><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+
+    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+
+    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+
+    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></ul></div></li>
 </ul>
     </div>
 </section>
