--- a/index.html
+++ b/index.html
@@ -9,23 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        .list-menu li:first-child a {
-            position: relative;
-            color: #404bbf;
-        }
-    
-        .list-menu li:first-child a::after {
-            content: '';
-            width: 100%;
-            position: absolute;
-            left: 0;
-            bottom: -1px;
-            height: 4px;
-            background-color: #404bbf;
-            border-radius: 2px;
-        }
-    </style>
+  
 </head> 
 <body>
     <header class="header">
@@ -62,7 +46,9 @@
         <h2 class="visually-hidden"></h2>
         <ul class="list spdt-list">
 
-          <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-antenna-1"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
+          <li class="spdt-point-list">
+            <div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-antenna-1"></use></svg></div>
+            <h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
 
           <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images.svg#icon-clock-1"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
 
