--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class="list spdt-list">
 
           <li class="spdt-point-list">
-            <div class="icon-container"><svg width="64" height="64"><use href="./images/icons.svg#icon-antenna-1"></use></svg></div>
+            <div class="icon-container"><svg width="64" height="64"><use href="./images/symbol-defs.svg#icon-antenna-1"></use></svg></div>
             <h3 class="heading-three">Strategy</h3><p class="spdt-p">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
 
           <li class="spdt-point-list"><div class="icon-container"><svg width="64" height="64"><use href="./images/icons.svg#icon-clock-1"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
@@ -66,7 +66,7 @@
     <h2 class="heading-two">Our Team</h2>
 <ul class="list list-section-name">
 
-    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list list"><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/icons.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list list"><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
 
     <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/icons.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
 
