--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing</p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
 
     <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel"/>
-        <div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer</p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></ul></div></li>
+        <div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer</p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"></svg></a></li></ul></div></li>
 </ul>
     </div>
 </section>
@@ -100,7 +100,17 @@
 
     <footer class="footer">
         <div class="container footer-container">
+            <div class="footer-info">
         <a href="./index.html" class="link logo-footer link-footer current">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+    <div class="footer-social-media container"><p class="p-footer-social-media">Social media</p>
+        <ul class="footer-list-social-media">
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+        </ul>
+    </div>
 
     </div>
     </footer> 
