--- a/index.html
+++ b/index.html
@@ -66,17 +66,38 @@
     <h2 class="heading-two">Our Team</h2>
 <ul class="list list-section-name">
 
-    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark"/>  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer</p> <ul class="social-media-list list"><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+    <li class="list-name"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark"/>  <div class="name"><h3 class="heading-three-name">Mark Guerrero</h3><p class="p-two">Product Designer</p> 
+        <ul class="social-media-list list">
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+        </ul></div></li>
 
-    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom"/>
-        <div class="name"><h3 class="heading-three-name">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+    <li class="list-name"><img src="./images/tomford.jpg" width="264" height="260" alt="tom"/><div class="name"><h3 class="heading-three-name">Tom Ford</h3><p class="p-two">Frontend Developer</p>
+        <ul class="social-media-list list">
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+        </ul></div></li>
 
-    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila"/>
-        <div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing</p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2#icon-twitter-1#icon-facebook-1#icon-linkedin-1"></use></svg></a></li></div></li>
+    <li class="list-name"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila"/><div class="name"><h3 class="heading-three-name">Camila Garcia</h3><p class="p-two">Marketing</p>
+        <ul class="social-media-list list">
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+        </ul></div></li>
 
-    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel"/>
-        <div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer</p><li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"></svg></a></li></ul></div></li>
-</ul>
+    <li class="list-name"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel"/><div class="name"><h3 class="heading-three-name">Daniel Wilson</h3><p class="p-two">UI Designer</p>
+        <ul class="social-media-list list">
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+            <li class="social-media"><a href="" class="social-media-link"><svg width="16" height="16" class="svg"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+        </ul></div></li>
+    </ul>
     </div>
 </section>
 
