--- a/index.html
+++ b/index.html
@@ -114,37 +114,47 @@
 
         <li class="portfolio-point">
             <div class="portfolio-image">
-            <div class="portfolio-image"><img src="./images/cashless-payment.jpg" width="360" height="260" alt="cashless-payment">
-                <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-                <div class="container-name-categories"><h3 class="heading-three">Cashless Payment</h3><p class="p-portfolio">Marketing</p></div></li>
+                <img src="./images/cashless-payment.jpg" width="360" height="260" alt="cashless-payment">
+                    <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                     <div class="container-name-categories">
+                         <h3 class="heading-three">Cashless Payment</h3>
+                          <p class="p-portfolio">Marketing</p></div></li>
 
 
         <li class="portfolio-point">
             <div class="portfolio-image">
             <img src="./images/meditation-app.jpg" width="360" height="260" alt="meditation-app">
-            <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-            <div class="container-name-categories"><h3 class="heading-three">Meditation App</h3><p class="p-portfolio">App</p></div></li>
+                <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                 <div class="container-name-categories">
+                     <h3 class="heading-three">Meditation App</h3>
+                         <p class="p-portfolio">App</p></div></li>
 
 
         <li class="portfolio-point">
             <div class="portfolio-image">
-            <img src="./images/taxi-service.jpg" width="360" height="260" alt="taxi-service">
-            <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-            <div class="container-name-categories"><h3 class="heading-three">Taxi Service</h3><p class="p-portfolio">Marketing</p></div></li>
+             <img src="./images/taxi-service.jpg" width="360" height="260" alt="taxi-service">
+                 <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                    <div class="container-name-categories">
+                        <h3 class="heading-three">Taxi Service</h3>
+                            <p class="p-portfolio">Marketing</p></div></li>
 
 
         <li class="portfolio-point">
             <div class="portfolio-image">
             <img src="./images/screen-ilustration.jpg" width="360" height="260" alt="screen-ilustration">
             <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-            <div class="container-name-categories"><h3 class="heading-three">Screen Illustrations</h3><p class="p-portfolio">Design</p></div></li>
+                <div class="container-name-categories">
+                    <h3 class="heading-three">Screen Illustrations</h3>
+                        <p class="p-portfolio">Design</p></div></li>
 
 
         <li class="portfolio-point">
             <div class="portfolio-image">
-            <img src="./images/online-course.jpg" width="360" height="260" alt="online-course">
-            <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-            <div class="container-name-categories"><h3 class="heading-three">Online Courses</h3><p class="p-portfolio">Marketing</p></div></li>
+                <img src="./images/online-course.jpg" width="360" height="260" alt="online-course">
+                    <p class="p-portfolio-image">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                        <div class="container-name-categories">
+                            <h3 class="heading-three">Online Courses</h3>
+                                <p class="p-portfolio">Marketing</p></div></li>
     </ul>
     </div>
     </section>
