--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
     </div>
     <div class="footer-social-media container"><p class="p-footer-social-media">Social media</p>
         <ul class="footer-list-social-media">
-            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
-            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
-            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
-            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-fotter-social-media"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-footer-social-media"><use href="./images/symbol-defs.svg#icon-instagram-2"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-footer-social-media"><use href="./images/symbol-defs.svg#icon-twitter-1"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-footer-social-media"><use href="./images/symbol-defs.svg#icon-facebook-1"></use></svg></a></li>
+            <li class="footer-point-social-media"><a class="footer-reference"><svg width="24" height="24" class="svg-footer-social-media"><use href="./images/symbol-defs.svg#icon-linkedin-1"></use></svg></a></li>
         </ul>
     </div>
 
